--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>My Money</title>
   <link rel="icon" type="image/png" href='https://img.icons8.com/wired/100/000000/question-mark.png' />
+  <link rel="stylesheet" type="text/css" href="./style.css"/>
 </head>
 <body>
   <div id="app"></div>
